# trick-cards

./: .env.local.example  .gitignore  .tauri-updater-keys.pub  README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts
.github/workflows/: release.yml
app/: globals.css  layout.tsx  page.tsx
app/agent/: page.tsx
app/cards/: page.tsx
app/collections/: page.tsx
app/daily/: page.tsx
app/papers/: page.tsx
components/: AsyncImage.tsx  ExternalLinkHandler.tsx  ImageLightbox.tsx  LastVisitedTracker.tsx  UpdateChecker.tsx
components/agent/: AgentWorkspace.tsx
components/cards/: CardDetailPanel.tsx  CardEditorModal.tsx  CardReaderModal.tsx  CardTile.tsx  CardsWorkspace.tsx  MarkdownPreview.tsx
components/collections/: CollectionSummary.tsx  CollectionTabs.tsx  CollectionsWorkspace.tsx
components/compare/: CompareWorkspace.tsx
components/daily/: DailyWorkspace.tsx
components/layout/: AppSidebar.tsx  DashboardLayout.tsx  TopBar.tsx  WindowChrome.tsx
components/papers/: PapersWorkspace.tsx
components/settings/: AISettingsModal.tsx
components/trash/: TrashModal.tsx
components/ui/: ContextMenu.tsx
lib/: cardPdfExport.ts  data.ts  imageStorage.ts  openExternal.ts  safeFetch.ts  storage.ts  types.ts  utils.ts  version.ts
lib/ai/: agent.ts  cards.ts  client-bridge.ts  config-client.ts  config-server.ts  daily.ts  llm.ts  papers.ts  search.ts  types.ts
lib/store/: TrickStore.tsx  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
